--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/main.ts",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
@@ -35,7 +36,8 @@
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.35",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "husky": "^7.0.0"
   },
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
