--- a/package.json
+++ b/package.json
@@ -32,19 +32,21 @@
     "commander": "^8.2.0",
     "esbuild": "^0.11.11",
     "eslint": "^7.22.0",
+    "husky": "^7.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.35",
-    "typescript": "^4.2.3",
-    "husky": "^7.0.0"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
+    "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "node-html-parser": "^4.1.5"
   }
 }
